# comtrade-inspector

./: .gitignore  AGENTS.md  README.md  feedback.txt  package-lock.json
.github/workflows/: deploy.yml
app/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
app/src/: app.d.ts  app.html
app/src/lib/: store.ts
app/src/lib/components/: AnalogWaveform.svelte  Sidebar.svelte  Switch.svelte  Upload.svelte
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/info/: +page.svelte
app/src/routes/waveform/: +page.svelte
app/static/: comtrade_rust_bg.wasm
comtrade_rust/: Cargo.toml  build.rs  package-lock.json
comtrade_rust/src/: lib.rs
design/: analog_waveform.html  info.html  upload.html
