[package]
name = "comtrade_rust"
description = "A WASM wrapper over the comtrade library for working with COMTRADE files"
authors = ["Marcus Holmgren <marcus.holmgren1@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/marcus-holmgren/comtrade-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
comtrade = { git = "https://github.com/drewsilcock/comtrade.git", rev = "ad281b6" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
encoding_rs = "0.8.33"
