[package]
name = "comtrade_rust"
description = "A WASM wrapper over the comtrade library for working with COMTRADE files"
authors = ["Marcus Holmgren <marcus.holmgren1@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/marcus-holmgren/comtrade-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.114"
comtrade = { git = "https://github.com/marcusholmgren/comtrade.git", rev = "e51d394453e5ddb1c7abce8aeea3473c2d455c7d" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
encoding_rs = "0.8.35"
thiserror = "1"
js-sys = "0.3.91"
web-sys = { version = "0.3.91", features = ["console"] }
